# data-scientist

./: .editorconfig  .gitattributes  .gitignore  ANALYSIS_REPORT.md  ARCHITECTURE_SIMPLIFICATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIAGNOSIS.md  FLYWHEEL_STATUS.md  INSTALL.md  PROJECT_STATUS.md  QUALITY_GAP_ANALYSIS.md  README.md  ROUND1_RESULTS.md  ROUND_2_OPTIMIZATION_REPORT.md  SECURITY.md  SESSION_SUMMARY.md  SKILL_AUDIT_FIXES.md  SKILL_IMPROVEMENTS.md  marketplace.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: release-notes-v0.1.0.md
evals/: AUDIT_20260613.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FIX_CHECKLIST.md  BASELINE_AND_ITER1_RESULTS.md  BASELINE_REBUILD_PLAN.md  BASELINE_RESULTS_PROGRESS.md  CASE_06_RETEST_GUIDE.md  COMPLETION_EXPLANATION.md  CURRENT_STATUS.md  DELIVERY_SUMMARY.md  EVAL_SYSTEM_AUDIT_20260613.md  EXECUTION_STATUS_REPORT.md  FINAL_COMPLETE_REPORT.md  FINAL_COMPLETION_REPORT_65PCT.md  FINAL_EXECUTION_REPORT.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS_REPORT.md  FLYWHEEL_COMPLETE.md  FLYWHEEL_ITER1_FAILURE_ANALYSIS.md  FLYWHEEL_ITER2_FINAL_RESULT.md  FLYWHEEL_ROUND2_PLAN.md  GOALS_COMPLETION_SUMMARY.md  IMPROVEMENTS.md  ITERATION_PLAN.md  ITERATION_STATUS.md  META_JUDGE_EXPERIMENT.md  NEXT_ACTIONS_CHECKLIST.md  P0_FIX_COMPLETE.md  P1-2_TEMPLATE_TEST_RESULTS.md  P1_P2_IMPROVEMENT_PLAN.md  PROGRESS_SUMMARY.md  PROGRESS_UPDATE_2051.md  README.md  REFERENCES_AUDIT.md  ROUND1_RESULTS.md  ROUND2_RESULTS.md  ROUND3_RESULTS.md  SCORING_MIGRATION.md  SESSION_FINAL_SUMMARY.md  SESSION_FINAL_SUMMARY_2115.md  (+6 more)
examples/: README.md
scripts/: sync_skill.sh
tests/: conftest.py  test_ab_validator.py  test_analysis_methods.py  test_anomaly.py  test_bootstrap.py  test_caching.py  test_classification.py  test_correlation.py  test_plotting.py  test_profile_dataset.py  test_readiness.py  test_regression.py  test_report_generator.py  test_run_full_workflow.py  test_shaping.py  test_spc.py  test_survival.py  test_time_series.py  test_validation.py
(+222 files in other folders)
